Overhaul the site content

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./resources/css/index.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Commemorating Chester Bennington</title>
+</head>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <!-- Banner section -->
+    <div class="banner">
+        <h1>Commemorating Chester Bennington</h1>
+        <p><em>A great man who screams like a demon, sings like an angel.</em></p>
+    </div>
 </body>
- 
 </html>
